client/src/style/app.scss
@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;500;600;700;800;900&display=swap");
@import "variables";
html {
  overflow: scroll;
}
::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* make scrollbar transparent */
}

body {
  font-family: "Libre Franklin", sans-serif;
  font-size: 1rem;

  background-color: $font-background-color;
}
.navbar {
  background: rgba(255, 255, 255, 0.32) !important;
  border-radius: 16px;
  box-shadow: $box-shadow;
  backdrop-filter: $backdrop-filter;
  -webkit-backdrop-filter: blur(5px);
  border: $borders;
}
.card {
  background: rgba(255, 255, 255, 0.131);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3);
}
.form-control {
  background: rgba(49, 49, 49, 0.069);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3);
}
.btn {
  background: rgba(255, 255, 255, 0.32);
  border-radius: 16px !important;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  color: black;
  -webkit-backdrop-filter: blur(5px);
  border: 1px solid rgba(255, 255, 255, 0.3);
}
.alert {
  width: 50%;
  margin: 0 auto;
  transition: opacity 1.5s;
}

span:hover {
  cursor: pointer;
}

.inside {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}
.font {
  position: absolute;
  padding-right: 50px;
  display: flex;
  justify-content: center;
  font-size: 45vw;
  height: calc(100vh - 100px);
  overflow: hidden;
  width: 100%;
  font-weight: 900;
  color: $main-text-color;
}
.create-note {
  color: $main-text-color;
  font-weight: 600;
}
.note {
  font-size: 1.2em;
  color: $main-text-color;
  font-weight: 500;
  background: rgba(255, 255, 255, 0.089);
}
h4 {
  font-weight: 700;
}
.form-control:focus {
  background: rgba(255, 255, 255, 0.274) !important;
  color: $main-text-color !important;
}
.card-subtitle {
  color: rgba(240, 248, 255, 0.437) !important;
}
.card-title {
  font-size: 1.2em;
  font-weight: 800;
}

